--- a/Overseer/Overseer.csproj
+++ b/Overseer/Overseer.csproj
@@ -47,8 +47,12 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileReader.cs" />
+    <Compile Include="FileStatus.cs" />
+    <Compile Include="IFileReader.cs" />
     <Compile Include="Source.cs" />
-    <Compile Include="SourceIndexer.cs" />
+    <Compile Include="SourceFile.cs" />
+    <Compile Include="TenderReader.cs" />
     <Compile Include="SourceRepository.cs" />
     <Compile Include="TenderType.cs" />
   </ItemGroup>
