--- a/Overseer.Tests/packages.config
+++ b/Overseer.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.16.5" targetFramework="net45" />
+  <package id="AutoFixture.AutoFakeItEasy" version="3.16.5" targetFramework="net45" />
+  <package id="FakeItEasy" version="1.17.0" targetFramework="net45" />
   <package id="NEST" version="0.12.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
