--- a/src/Overseer.Tests/app.config
+++ b/src/Overseer.Tests/app.config
@@ -10,6 +10,10 @@
         <assemblyIdentity name="FakeItEasy" publicKeyToken="eff28e2146d5fd2c" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.17.0.0" newVersion="1.17.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.extensions" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.2.1705" newVersion="1.9.2.1705" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
