--- a/src/Overseer.Tests/packages.config
+++ b/src/Overseer.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoFixture" version="3.16.5" targetFramework="net45" />
   <package id="AutoFixture.AutoFakeItEasy" version="3.16.5" targetFramework="net45" />
+  <package id="AutoFixture.Xunit" version="3.16.5" targetFramework="net45" />
   <package id="FakeItEasy" version="1.17.0" targetFramework="net45" />
   <package id="NEST" version="0.12.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
