--- a/src/Overseer.Tests/packages.config
+++ b/src/Overseer.Tests/packages.config
@@ -6,6 +6,7 @@
   <package id="FakeItEasy" version="1.17.0" targetFramework="net45" />
   <package id="NEST" version="0.12.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="SemanticComparison" version="3.16.5" targetFramework="net45" />
   <package id="Shouldly" version="1.1.1.1" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
