--- a/src/Overseer.Importer/Overseer.Importer.csproj
+++ b/src/Overseer.Importer/Overseer.Importer.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CF2E1EEB-B153-4C17-8B6C-689FBE6D4F91}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Overseer.Runner</RootNamespace>
-    <AssemblyName>Overseer.Runner</AssemblyName>
+    <RootNamespace>Overseer.Importer</RootNamespace>
+    <AssemblyName>Overseer.Importer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
