--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\NancyApplication1\packages.config" />
+  <repository path="..\Overseer.Service.Tests\packages.config" />
+  <repository path="..\Overseer.Service\packages.config" />
   <repository path="..\Overseer.Tests\packages.config" />
   <repository path="..\Overseer\packages.config" />
 </repositories>
