--- a/src/Overseer.WebApp.Tests/Overseer.WebApp.Tests.csproj
+++ b/src/Overseer.WebApp.Tests/Overseer.WebApp.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F2CCF21B-0C06-4466-8F94-0CE87EDBC023}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Overseer.Service.Tests</RootNamespace>
-    <AssemblyName>Overseer.Service.Tests</AssemblyName>
+    <RootNamespace>Overseer.WebApp.Tests</RootNamespace>
+    <AssemblyName>Overseer.WebApp.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -73,7 +73,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Overseer.Service\Overseer.Service.csproj">
+    <ProjectReference Include="..\Overseer.WebApp\Overseer.WebApp.csproj">
       <Project>{B4F9C525-5C56-440E-B4C2-972A33D7C8CD}</Project>
       <Name>Overseer.Service</Name>
     </ProjectReference>
