--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -4,5 +4,6 @@
   <repository path="..\Overseer.Service.Tests\packages.config" />
   <repository path="..\Overseer.Service\packages.config" />
   <repository path="..\Overseer.Tests\packages.config" />
+  <repository path="..\Overseer.WebApp\packages.config" />
   <repository path="..\Overseer\packages.config" />
 </repositories>
