--- a/src/Overseer.WebApp/Overseer.WebApp.csproj
+++ b/src/Overseer.WebApp/Overseer.WebApp.csproj
@@ -127,6 +127,7 @@
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="OverseerModule.cs" />
+    <Compile Include="TenderModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
