extract path to config

--- a/src/Overseer.Importer/App.config
+++ b/src/Overseer.Importer/App.config
@@ -11,4 +11,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="src-dir" value="W:\ftp"/>
+  </appSettings>
 </configuration>
