filereader enumerates regions

--- a/src/Overseer.Importer/App.config
+++ b/src/Overseer.Importer/App.config
@@ -12,6 +12,6 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="src-dir" value="W:\ftp"/>
+    <add key="ftp" value="ftp://localhost"/>
   </appSettings>
 </configuration>
