buffer region names

--- a/src/Overseer.Importer/App.config
+++ b/src/Overseer.Importer/App.config
@@ -12,6 +12,6 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="ftp" value="ftp://localhost"/>
+    <add key="ftp" value="ftp://ftp.zakupki.gov.ru" />
   </appSettings>
 </configuration>
