--- a/src/Overseer.WebApp/packages.config
+++ b/src/Overseer.WebApp/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="bootstrap" version="3.1.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Nancy" version="0.21.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Aspnet" version="0.21.1" targetFramework="net40" />
   <package id="Nancy.Viewengines.Razor" version="0.21.1" targetFramework="net40" />
