--- a/src/Overseer/Overseer.csproj
+++ b/src/Overseer/Overseer.csproj
@@ -53,6 +53,7 @@
     <Compile Include="FileReader.cs" />
     <Compile Include="FileStatus.cs" />
     <Compile Include="IFileReader.cs" />
+    <Compile Include="ImportEntry.cs" />
     <Compile Include="ITenderRepository.cs" />
     <Compile Include="Tender.cs" />
     <Compile Include="SourceFile.cs" />
