--- a/src/Overseer/Overseer.csproj
+++ b/src/Overseer/Overseer.csproj
@@ -58,7 +58,7 @@
     <Compile Include="ITenderRepository.cs" />
     <Compile Include="Tender.cs" />
     <Compile Include="SourceFile.cs" />
-    <Compile Include="TenderRetriever.cs" />
+    <Compile Include="TenderImporter.cs" />
     <Compile Include="TenderRepository.cs" />
     <Compile Include="TenderType.cs" />
   </ItemGroup>
