--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\NancyApplication1\packages.config" />
+  <repository path="..\Overseer.Doorkeeper\packages.config" />
   <repository path="..\Overseer.Importer\packages.config" />
   <repository path="..\Overseer.Service.Tests\packages.config" />
   <repository path="..\Overseer.Service\packages.config" />
