webapp shows most recent tender date

--- a/src/Overseer.WebApp/Overseer.WebApp.csproj
+++ b/src/Overseer.WebApp/Overseer.WebApp.csproj
@@ -131,8 +131,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Models\HomeModel.cs" />
+    <Compile Include="Models\TenderModel.cs" />
     <Compile Include="OverseerModule.cs" />
-    <Compile Include="TenderModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
