--- a/src/Overseer.WebApp/Overseer.WebApp.csproj
+++ b/src/Overseer.WebApp/Overseer.WebApp.csproj
@@ -128,6 +128,7 @@
     <Content Include="Content\styles\styles.css" />
     <Content Include="Web.config" />
     <None Include="Properties\PublishProfiles\localhost.pubxml" />
+    <None Include="Properties\PublishProfiles\aws.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
