ElasticClientFactory, fix tests

--- a/src/Overseer.Doorkeeper/App.config
+++ b/src/Overseer.Doorkeeper/App.config
@@ -14,5 +14,7 @@
   </runtime>
   <appSettings>
     <add key="ftp" value="ftp://ftp.zakupki.gov.ru" />
+    <add key="esHost" value="http://localhost:9200"/>
+    <add key="esIndex" value="ovrs"/>
   </appSettings>
 </configuration>
