--- a/src/Overseer.WebApp/Web.config
+++ b/src/Overseer.WebApp/Web.config
@@ -9,6 +9,13 @@
                requirePermission="false" />
     </sectionGroup>
   </configSections>
+
+  <appSettings>
+    <add key="esHost" value="http://localhost:9200" />
+    <add key="esIndex" value="ovrs" />
+    <add key="webPages:Enabled" value="false" />
+  </appSettings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5">
       <buildProviders>
@@ -26,9 +33,6 @@
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
   </system.webServer>
-  <appSettings>
-    <add key="webPages:Enabled" value="false" />
-  </appSettings>
   <system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
       <namespaces>
@@ -44,4 +48,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
 </configuration>
