--- a/src/Overseer.Doorkeeper/Overseer.Doorkeeper.csproj
+++ b/src/Overseer.Doorkeeper/Overseer.Doorkeeper.csproj
@@ -57,9 +57,18 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Nest, Version=0.12.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NEST.0.12.0.0\lib\NET4\Nest.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,7 +80,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Doorkeeper.cs" />
+    <Compile Include="FileReader.cs" />
+    <Compile Include="IFileReader.cs" />
+    <Compile Include="ImportEntry.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="SourceFile.cs" />
+    <Compile Include="TenderImporter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
