--- a/src/Overseer.Doorkeeper/packages.config
+++ b/src/Overseer.Doorkeeper/packages.config
@@ -2,6 +2,8 @@
 
 <packages>
   <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="NEST" version="0.12.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="SlowCheetah" version="2.5.10.3" targetFramework="net45" />
   <package id="Topshelf" version="3.1.3" targetFramework="net45" />
 </packages>
