moved stuff around

--- a/src/Overseer.Doorkeeper.Tests/app.config
+++ b/src/Overseer.Doorkeeper.Tests/app.config
@@ -12,4 +12,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="ftp" value="ftp://localhost" />
+    <add key="esHost" value="http://localhost:9200" />
+    <add key="esIndex" value="ovrs-test" />
+  </appSettings>
 </configuration>
