--- a/src/Overseer.Doorkeeper.Tests/packages.config
+++ b/src/Overseer.Doorkeeper.Tests/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoFixture" version="3.16.5" targetFramework="net45" />
   <package id="AutoFixture.AutoFakeItEasy" version="3.16.5" targetFramework="net45" />
   <package id="FakeItEasy" version="1.17.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="Shouldly" version="1.1.1.1" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
