--- a/src/Overseer.WebApp.Tests/Overseer.WebApp.Tests.csproj
+++ b/src/Overseer.WebApp.Tests/Overseer.WebApp.Tests.csproj
@@ -61,9 +61,13 @@
     <Reference Include="xunit">
       <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
     </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OverseerModuleTests.cs" />
+    <Compile Include="RegionNameServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
