--- a/src/Overseer.WebApp.Tests/packages.config
+++ b/src/Overseer.WebApp.Tests/packages.config
@@ -9,4 +9,5 @@
   <package id="Nancy.Testing" version="0.22.2" targetFramework="net45" />
   <package id="Shouldly" version="1.1.1.1" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
 </packages>
