--- a/src/Overseer.Doorkeeper.Tests/Overseer.Doorkeeper.Tests.csproj
+++ b/src/Overseer.Doorkeeper.Tests/Overseer.Doorkeeper.Tests.csproj
@@ -77,9 +77,9 @@
       <Project>{043FE83E-4567-4151-AEA4-8329EBE5B0F6}</Project>
       <Name>Overseer.Doorkeeper</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Overseer\Overseer.csproj">
+    <ProjectReference Include="..\Overseer.Common\Overseer.Common.csproj">
       <Project>{8081C50C-F032-4D5A-8630-B85DF58C9F55}</Project>
-      <Name>Overseer</Name>
+      <Name>Overseer.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
