--- a/src/Overseer.WebApp.Tests/Overseer.WebApp.Tests.csproj
+++ b/src/Overseer.WebApp.Tests/Overseer.WebApp.Tests.csproj
@@ -79,11 +79,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Overseer.WebApp\Overseer.WebApp.csproj">
       <Project>{B4F9C525-5C56-440E-B4C2-972A33D7C8CD}</Project>
-      <Name>Overseer.Service</Name>
+      <Name>Overseer.WebApp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Overseer\Overseer.csproj">
+    <ProjectReference Include="..\Overseer.Common\Overseer.Common.csproj">
       <Project>{8081C50C-F032-4D5A-8630-B85DF58C9F55}</Project>
-      <Name>Overseer</Name>
+      <Name>Overseer.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
