--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,13 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\NancyApplication1\packages.config" />
+  <repository path="..\Overseer.Common.Tests\packages.config" />
+  <repository path="..\Overseer.Common\packages.config" />
   <repository path="..\Overseer.Doorkeeper.Tests\packages.config" />
   <repository path="..\Overseer.Doorkeeper\packages.config" />
-  <repository path="..\Overseer.Importer\packages.config" />
-  <repository path="..\Overseer.Service.Tests\packages.config" />
-  <repository path="..\Overseer.Service\packages.config" />
-  <repository path="..\Overseer.Tests\packages.config" />
   <repository path="..\Overseer.WebApp.Tests\packages.config" />
   <repository path="..\Overseer.WebApp\packages.config" />
-  <repository path="..\Overseer\packages.config" />
 </repositories>
