--- a/src/Overseer.WebApp/Overseer.WebApp.csproj
+++ b/src/Overseer.WebApp/Overseer.WebApp.csproj
@@ -130,12 +130,24 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\css\styles.css" />
+    <None Include="Scripts\jquery-2.0.3.intellisense.js" />
+    <Content Include="Scripts\ember-1.1.2.debug.js" />
+    <Content Include="Scripts\ember-1.1.2.js" />
+    <Content Include="Scripts\ember-1.1.2.min.js" />
+    <Content Include="Scripts\ember-data.js" />
+    <Content Include="Scripts\ember-data.min.js" />
+    <Content Include="Scripts\ember-data.prod.js" />
+    <Content Include="Scripts\handlebars-1.1.2.js" />
+    <Content Include="Scripts\handlebars.runtime-1.1.2.js" />
+    <Content Include="Scripts\jquery-2.0.3.js" />
+    <Content Include="Scripts\jquery-2.0.3.min.js" />
     <Content Include="Web.config" />
     <None Include="Properties\PublishProfiles\localhost.pubxml" />
     <None Include="Properties\PublishProfiles\aws.pubxml" />
     <Content Include="Views\results.sshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\jquery-2.0.3.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
