--- a/src/Overseer.WebApp/packages.config
+++ b/src/Overseer.WebApp/packages.config
@@ -3,7 +3,10 @@
 <packages>
   <package id="bootstrap" version="3.1.0" targetFramework="net45" />
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
-  <package id="jQuery" version="1.9.0" targetFramework="net45" />
+  <package id="Ember" version="1.1.2" targetFramework="net45" />
+  <package id="EmberData" version="2.0.0" targetFramework="net45" />
+  <package id="Handlebars" version="1.1.2" targetFramework="net45" />
+  <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Nancy" version="0.21.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Aspnet" version="0.21.1" targetFramework="net40" />
