conditional compilation instead of test ftp

--- a/src/Overseer.Doorkeeper/App.config
+++ b/src/Overseer.Doorkeeper/App.config
@@ -13,7 +13,7 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="ftp" value="ftp://localhost:22" />
+    <add key="ftp" value="ftp://ftp.zakupki.gov.ru" />
     <add key="esHost" value="http://localhost:9200" />
     <add key="esIndex" value="ovrs" />
   </appSettings>
