--- a/src/Overseer.Common.Tests/packages.config
+++ b/src/Overseer.Common.Tests/packages.config
@@ -8,6 +8,7 @@
   <package id="NEST" version="0.12.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="SemanticComparison" version="3.16.5" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="4.0.12" targetFramework="net45" />
   <package id="Shouldly" version="1.1.1.1" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
