disable browser link

--- a/src/Overseer.WebApp/Web.config
+++ b/src/Overseer.WebApp/Web.config
@@ -13,6 +13,7 @@
     <add key="esIndex" value="ovrs" />
 
     <add key="webPages:Enabled" value="false" />
+    <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
 
   <system.web>
