--- a/src/Overseer.Doorkeeper/Overseer.Doorkeeper.csproj
+++ b/src/Overseer.Doorkeeper/Overseer.Doorkeeper.csproj
@@ -90,11 +90,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Doorkeeper.cs" />
-    <Compile Include="FileReader.cs" />
-    <Compile Include="IFileReader.cs" />
+    <Compile Include="GoldenRetriever.cs" />
+    <Compile Include="IGoldenRetriever.cs" />
     <Compile Include="ImportEntry.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="SourceFile.cs" />
+    <Compile Include="Raw.cs" />
     <Compile Include="TenderImporter.cs" />
   </ItemGroup>
   <ItemGroup>
