--- a/src/Overseer.Doorkeeper.Tests/Overseer.Doorkeeper.Tests.csproj
+++ b/src/Overseer.Doorkeeper.Tests/Overseer.Doorkeeper.Tests.csproj
@@ -81,7 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileReaderTests.cs" />
-    <Compile Include="FileReaderTestable.cs" />
+    <Compile Include="GoldenRetrieverTestable.cs" />
     <Compile Include="TenderImporterTests.cs" />
   </ItemGroup>
   <ItemGroup>
