hashset + fix rename

--- a/src/Overseer.Doorkeeper.Tests/Overseer.Doorkeeper.Tests.csproj
+++ b/src/Overseer.Doorkeeper.Tests/Overseer.Doorkeeper.Tests.csproj
@@ -80,7 +80,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileReaderTests.cs" />
+    <Compile Include="GoldenRetrieverTests.cs" />
     <Compile Include="GoldenRetrieverTestable.cs" />
     <Compile Include="TenderImporterTests.cs" />
   </ItemGroup>
