--- a/src/Overseer.Doorkeeper/Overseer.Doorkeeper.csproj
+++ b/src/Overseer.Doorkeeper/Overseer.Doorkeeper.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Doorkeeper.cs" />
+    <Compile Include="FtpClient.cs" />
     <Compile Include="GoldenRetriever.cs" />
     <Compile Include="IGoldenRetriever.cs" />
     <Compile Include="ImportEntry.cs" />
