--- a/src/Overseer.Doorkeeper/Overseer.Doorkeeper.csproj
+++ b/src/Overseer.Doorkeeper/Overseer.Doorkeeper.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CachedRaw.cs" />
     <Compile Include="Doorkeeper.cs" />
     <Compile Include="FtpClient.cs" />
     <Compile Include="GoldenRetriever.cs" />
