--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -4,6 +4,9 @@
   <repository path="..\Overseer.Common\packages.config" />
   <repository path="..\Overseer.Doorkeeper.Tests\packages.config" />
   <repository path="..\Overseer.Doorkeeper\packages.config" />
+  <repository path="..\Overseer.GoldenRetriever\packages.config" />
+  <repository path="..\Overseer.NumberExtractor\packages.config" />
+  <repository path="..\Overseer.Watchdog\packages.config" />
   <repository path="..\Overseer.WebApp.Tests\packages.config" />
   <repository path="..\Overseer.WebApp\packages.config" />
 </repositories>
