--- a/src/Overseer.NumberExtractor/Overseer.NumberExtractor.csproj
+++ b/src/Overseer.NumberExtractor/Overseer.NumberExtractor.csproj
@@ -51,7 +51,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -62,6 +61,9 @@
       <Project>{8081C50C-F032-4D5A-8630-B85DF58C9F55}</Project>
       <Name>Overseer.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
